# SnakeGame

./: README.md
sourcefile/: CMakeLists.txt
sourcefile/include/: food.h  gamerenderer.h  menuwindow.h  skin.h  snake.h  snakegame.h  soundmanager.h
sourcefile/src/: food.cpp  gamerenderer.cpp  main.cpp  menuwindow.cpp  snake.cpp  snakegame.cpp  soundmanager.cpp
sourcefile/styles/: main.qss
